added new obits

--- a/_posts/2016-07-26-j-r-parten.md
+++ b/_posts/2016-07-26-j-r-parten.md
@@ -8,4 +8,4 @@ tags: [texans, oilmen, online]
 "I don't know that Parten was ever liberal in his views, but he was an immensely civilized man, with a deep reverance for the Constitution. He read widely and had great faith in this country. Of course, he had himself gone from picking cotton in East Texas as a boy to the university and on to become one of the wealthiest men in the country. So he always worked to make sure others had the same kind of opportunities."
 
 #### Read Online
-Molly Ivins, "[The Real J.R.](http://archives.texasobserver.org/issue/1992/12/25#page=23 "Molly Ivins's obituary in the Texas Observer for J.R. Parten")," *Texas Observer*, December 25, 1992, accessed July 26, 2016, http://archives.texasobserver.org/issue/1992/12/25#page=23.
+Molly Ivins, "[The Real J.R.](http://archives.texasobserver.org/issue/1992/12/25#page=23 "Molly Ivins's obituary in the Texas Observer for J.R. Parten"){:target="_blank"}," *Texas Observer*, December 25, 1992, accessed July 26, 2016, http://archives.texasobserver.org/issue/1992/12/25#page=23.
